# financeControl

./: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
apps/financial/: urls.py  views.py
apps/financial/domain/entities/: institution.py
apps/financial/fixtures/: institutions.json
apps/financial/migrations/: 0001_initial.py
apps/financial/models/: __init__.py  institution.py  spent.py
apps/financial/repositories/: __init__.py  institution_repository.py
apps/financial/repositories/interfaces/: __init__.py  institution_repository.py
apps/financial/serializers/: institutions.py  institutions_read_serializer.py
apps/financial/usecases/: get_institution.py
apps/financial/utils/: institution_model_to_domain.py
apps/indicators/: apps.py
apps/indicators/fixtures/: indicators.json
apps/indicators/migrations/: 0001_initial.py
apps/indicators/models/: __init__.py  flag.py
apps/userinfo/: apps.py  urls.py  views.py
apps/userinfo/domain/entities/: person.py  user.py
apps/userinfo/migrations/: 0001_initial.py  0002_person_user.py
apps/userinfo/models/: __init__.py  address.py  contact.py  person.py
apps/userinfo/repositories/: __init__.py  person_repository.py  user_repository.py
apps/userinfo/serializers/: person_read_serializer.py  person_write_serializer.py  user_write_serializer.py
apps/userinfo/usecases/: authenticate_user.py  create_account.py  generate_token_access.py
apps/userinfo/utils/: person_model_to_domain.py  user_model_to_domain.py
setup/: settings.py  urls.py
(+3 files in other folders)
