[tool.poetry]
name = "finance-control"
version = "0.1.0"
description = ""
authors = ["HiltonDosSantos <hiltoncosta@ecodots.com.br>"]
readme = "README.md"
packages = [{include = "finance_control"}]

[tool.poetry.dependencies]
python = "^3.10"
psycopg2-binary = "2.9.5"
django = "^4.2.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
